--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "twig/twig": "~1.11"
+        "twig/twig": "1.6.5"
     },
     "require-dev": {
         "phpunit/phpunit": "4.0.*"
