Change component states to use structclass instead of arrays.

--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,16 @@
             "email": "tolan@patternseek.net"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "/home/tolan/storage/workspace/patternseek-structclass"
+        }
+    ],
     "require": {
         "php": ">=5.3.3",
-        "twig/twig": "1.17.0"
+        "twig/twig": "1.17.0",
+        "patternseek/structclass": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "4.0.*"
