--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
     "require": {
         "php": ">=5.3.3",
         "twig/twig": "1.17.0",
-        "patternseek/structclass": "dev-master"
+        "patternseek/structclass": "dev-master",
+        "fxp/composer-asset-plugin": "~1.0",
+        "bower-asset/jquery": "1.11.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.0.*"
