Added PSR 3 logger support and general debug log messages.

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "php": ">=5.3.3",
         "twig/twig": "1.17.0",
-        "patternseek/structclass": "dev-master"
+        "patternseek/structclass": "dev-master",
+        "psr/log": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.0.*"
