--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "php": ">=5.3.3",
         "twig/twig": "1.17.0",
         "patternseek/structclass": "dev-master",
+        "patternseek/dependencyinjector": "dev-master",
         "psr/log": "^1.0"
     },
     "require-dev": {
