--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "twig/twig": "1.17.0",
+        "twig/twig": "1.*",
         "patternseek/structclass": "dev-master",
         "patternseek/dependencyinjector": "dev-master",
         "psr/log": "^1.0"
