--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "require": {
         "php": ">=5.3.3",
         "twig/twig": "1.*",
-        "patternseek/structclass": "dev-master",
-        "patternseek/dependencyinjector": "dev-master",
+        "patternseek/structclass": "0.1.*",
+        "patternseek/dependencyinjector": "0.1.*",
         "psr/log": "^1.0"
     },
     "require-dev": {
