--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
         }
     ],
     "require": {
-        "php": ">=5.3.3",
+        "php": ">=7.3",
         "twig/twig": "1.*",
         "patternseek/structclass": "0.1.*",
         "patternseek/dependencyinjector": "0.1.*",
         "psr/log": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.0.*"
+        "phpunit/phpunit": "8.*.*"
     },
     "autoload": {
         "psr-4": {
